<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_you">About You</string>
    <string name="accept">Accept</string>
    <string name="account_is_paused">Your account is currently paused. To message your matches, reactivate your account.</string>
    <string name="account_paused">Account Paused</string>
    <string name="accountkit_error_message_template" formatted="false">%s (%s)</string>
    <string name="action_retry">RETRY</string>
    <string name="ad_logo">Ad</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_company">Add Company</string>
    <string name="add_email_rational_explanation">This will be used to help you recover your account in case you forget your password.</string>
    <string name="add_email_to_secure_account">Please add an email to secure your account</string>
    <string name="add_job_title">Add Job Title</string>
    <string name="add_password_to_secure_account">Please add a password to secure your account</string>
    <string name="add_school">Add School</string>
    <string name="added_by_friend_modal_button_text">See Who’s Going Out</string>
    <string name="added_by_friend_to_group_modal_title">%1$s added you to a group on Tinder Social</string>
    <string name="added_by_friends_friend_text_1_friend">%s.</string>
    <string name="added_by_friends_friend_text_2_friend">%1$s &amp; %2$s.</string>
    <string name="added_by_friends_friend_text_3_friend">%1$s, %2$s, &amp; %3$s.</string>
    <string name="age_in_settings_detail">Tinder uses these preferences to suggest matches. Some match suggestions may not fall within your desired parameters.</string>
    <string name="allow_group_add">Swipe with Friends</string>
    <string name="allow_later_button">Later</string>
    <string name="allow_location_button">Allow Location</string>
    <string name="allow_notification_button">Allow Notifications</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="already_matched">Already matched</string>
    <string name="alt_auth_disclaimer_content">"We’re constantly improving the app to make it better for everyone. Your feedback is important and will be taken into consideration for future app updates.
We’re working on other ways to sign up for Tinder.
Stay tuned."</string>
    <string name="alt_auth_disclaimer_title">Thanks for the feedback</string>
    <string name="and_all_the_features_of_tinder_plus">and all the features of Tinder+</string>
    <string name="apologies">Apologies!</string>
    <string name="app_id">464891386855067</string>
    <string name="app_name">Tinder</string>
    <string name="app_settings">App Settings</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_username_delete">Are you sure you want to delete your username?</string>
    <string name="ask_delete_account">Delete Account?</string>
    <string name="ask_logout">Logout?</string>
    <string name="ask_me">Ask Me</string>
    <string name="auth_fb_disclaimer_text">We don’t post anything to Facebook.</string>
    <string name="auth_fb_disclaimer_title">We take your privacy seriously</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="badges_verified">Verified</string>
    <string name="be_chill">Be Chill</string>
    <string name="be_cool">Be Cool</string>
    <string name="be_friendly">Be Friendly</string>
    <string name="be_nice">Be Nice</string>
    <string name="be_respectful">Be respectful</string>
    <string name="before_chat_pointers">Before you chat, here are some pointers...</string>
    <string name="behave_around_here">behave around here</string>
    <string name="best_photo">Best Photo</string>
    <string name="best_value">Best Value</string>
    <string name="birthdate">Birthdate</string>
    <string name="blend">Blend</string>
    <string name="blend_default">Default</string>
    <string name="block">Unmatch</string>
    <string name="blocked">Unmatched!</string>
    <string name="boost_again">boost again</string>
    <string name="boost_description">Be the top profile in your area for %d minutes to get more matches.</string>
    <string name="boost_feature_description_upsell">Give me %1$d free %2$s every%3$s %4$s</string>
    <string name="boost_feature_title">Tinder Boost</string>
    <string name="boost_get_matches_faster">Skip The Line</string>
    <string name="boost_intro_info_title_upsell">You get %1$d free %2$s every%3$s %4$s</string>
    <string name="boost_multiplier_views">views</string>
    <string name="boost_notification_title">Boost is Over</string>
    <string name="boost_paywall_button_boost_me">boost me</string>
    <string name="boost_paywall_perk_description">Be the top profile in your area for %d minutes to get more matches!</string>
    <string name="boost_paywall_title">@string/boost_get_matches_faster</string>
    <string name="boost_paywall_title_description">Be the top profile in your area for %d minutes to get more matches.</string>
    <string name="boost_paywall_title_description_out_of_boost">Until your next free Boost.</string>
    <string name="boost_paywall_title_out_of_boost">Out of Boosts!</string>
    <string name="boost_perk_carousel_description">Get %1$d free %2$s every%3$s %4$s</string>
    <string name="boost_start_tool_tip">Keep swiping for the best results!</string>
    <string name="boost_summary_description">You got up to %sx more profile views. Swipe to see who checked you out.</string>
    <string name="boost_summary_info_description_upsell">Tinder Plus users enjoy %1$d free %2$s every%3$s %4$s and more</string>
    <string name="boost_summary_info_title_upsell">Get %1$d free %2$s every%3$s %4$s!</string>
    <string name="boost_summary_title_non_plus">Your Boost was a success</string>
    <string name="boost_summary_title_plus">Your Boost was a success!</string>
    <string name="boost_title">Skip The Line</string>
    <string name="boost_tool_tip">Get More Matches. Try Boost!</string>
    <string name="boost_update_description">You’re being seen by more people. Keep swiping for the best results!</string>
    <string name="boost_your_profile_get_likes">Boost your profile to get more likes!</string>
    <string name="both_gender">Men, Women</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_main_matches">Button Main Matches</string>
    <string name="btn_main_menu">Button Main Menu</string>
    <string name="can_tell_us_how">Can you tell us how to improve?</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_share_rec">This user has sharing disabled</string>
    <string name="cannot_superlike">Cannot Super Like. Please try again later.</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_expired_details">Like to match and continue the conversation one on one.</string>
    <string name="chat_expired_title">This chat has expired</string>
    <string name="chat_expired_title_group">This group chat has expired.</string>
    <string name="chat_gesture_announcement">New! Tap to explore and send reactions!</string>
    <string name="chat_gesture_announcement_reply">Reply by sending a reaction!</string>
    <string name="chat_input_clear">Clear</string>
    <string name="chat_input_gif">Gif</string>
    <string name="chat_input_gif_close">Close Gifs</string>
    <string name="chat_input_hint">Type a message…</string>
    <string name="chat_input_hint_gif">Search for a GIF…</string>
    <string name="chat_input_reaction">Reaction</string>
    <string name="chat_input_send">Send</string>
    <string name="chat_message_image_description">Gif message</string>
    <string name="chat_message_like">Like</string>
    <string name="chat_message_liked">Liked</string>
    <string name="chat_message_not_delivered">Not Delivered</string>
    <string name="chat_message_sent">Sent</string>
    <string name="checkBox_females">Show Me: Women</string>
    <string name="checkBox_males">Show Me: Men</string>
    <string name="do_not_be_a">Don’t be a</string>
    <string name="got_it_action">Got It!</string>
    <string name="have_fun">Have fun</string>
    <string name="help_reporting">help us help you by reporting</string>
    <string name="life_is_short">life’s short</string>
    <string name="person_other_end">there’s a person on the other end</string>
    <string name="places_get_started">Get started</string>
    <string name="places_get_started_promise">We won’t show where you are right now.</string>
    <string name="places_introducing">Introducing</string>
    <string name="places_is_off">Places is OFF</string>
    <string name="places_learn_more">Learn More</string>
    <string name="places_never_show_now_promise">We will never show where you are right now.</string>
    <string name="places_turn_back_on_to_meet">Turn back ON to meet people who like going to the same places as you.</string>
    <string name="places_turn_places_on">Turn Places On</string>
    <string name="places_welcome_body">Discover people who hang out at the same places as you. Enable your background location to get started.</string>
    <string name="pleasantly_surprised">you’ll be pleasantly surprised</string>
    <string name="slide_acknowledge">Slide right to start chatting</string>
    <string name="start_convo">Start the convo</string>
    <string name="tap_to_agree">tap each box to agree</string>
    <string name="thank_you">Thank you</string>
    <string name="you_r_in_control">You’re in control</string>
</resources>