<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@drawable/places_gradient_white_opaque" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="bottom|center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/places_disabled_side_margin" android:layout_marginRight="@dimen/places_disabled_side_margin">
        <com.tinder.views.CustomTextView android:textSize="@dimen/places_introducing_text" android:textColor="@color/black_1" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/places_introducing" android:textAlignment="center" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/places_mark_welcome_top_margin" android:src="@drawable/places_mark" />
        <com.tinder.views.CustomTextView android:textSize="@dimen/places_welcome_body_text" android:textColor="@color/black_1" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/places_welcome_body_top_margin" android:text="@string/places_welcome_body" android:textAlignment="center" />
        <com.tinder.views.CustomButton android:textSize="@dimen/place_card_button_text_size" android:textColor="@color/white" android:id="@id/placesGetStartedButton" android:background="@drawable/place_rounded_rectangle_red_gradient" android:layout_width="fill_parent" android:layout_height="@dimen/places_welcome_button_height" android:layout_marginTop="@dimen/places_get_started_button_top_margin" android:text="@string/places_get_started" android:textAllCaps="true" app:customFontStyle="semi_bold" />
        <com.tinder.views.CustomTextView android:textSize="@dimen/places_never_show_promise_text_size" android:textColor="@color/places_disabled_promise_gray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/places_get_started_promise_top_margin" android:text="@string/places_get_started_promise" android:textAlignment="center" />
        <com.tinder.views.CustomTextView android:textSize="@dimen/places_learn_more_text_size" android:textColor="@color/places_disabled_promise_gray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/places_learn_more_top_margin" android:layout_marginBottom="@dimen/places_learn_more_bottom_margin" android:text="@string/places_learn_more" android:textAllCaps="true" android:textAlignment="center" app:customFontStyle="semi_bold" />
    </LinearLayout>
</FrameLayout>