<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@color/white" android:paddingLeft="@dimen/space_xxl" android:paddingTop="@dimen/space_xxl" android:paddingRight="@dimen/space_xxl" android:paddingBottom="@dimen/space_xxl" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.tinder.views.CustomTextView android:id="@id/msgstd_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/before_chat_pointers" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/MessageStd.DialogTitle" />
        <com.tinder.views.CustomTextView android:id="@id/emoji_raised_hand" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/msgstd_dialog_title" style="@style/MessageStd.Emoji_Female" />
        <com.tinder.views.CustomTextView android:gravity="center" android:id="@id/start_convo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_convo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/emoji_raised_hand" style="@style/MessageStd.Header" />
        <com.tinder.views.CustomTextView android:id="@id/pleasantly_surprised" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pleasantly_surprised" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/start_convo" style="@style/MessageStd.SubHeaderFemale" />
        <View android:id="@id/separator_raised_hand" android:background="@color/grey_medium_1" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="@dimen/space_s" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pleasantly_surprised" />
        <com.tinder.views.CustomTextView android:id="@id/emoji_closed_fist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/separator_raised_hand" style="@style/MessageStd.Emoji_Female" />
        <com.tinder.views.CustomTextView android:gravity="center" android:id="@id/you_r_in_control" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/you_r_in_control" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/emoji_closed_fist" style="@style/MessageStd.Header" />
        <com.tinder.views.CustomTextView android:id="@id/help_reporting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_reporting" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/you_r_in_control" style="@style/MessageStd.SubHeaderFemale" />
        <View android:id="@id/separator_closed_fist" android:background="@color/grey_medium_1" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="@dimen/space_s" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/help_reporting" />
        <com.tinder.views.CustomTextView android:id="@id/emoji_party_popper_tada" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/separator_closed_fist" style="@style/MessageStd.Emoji_Female" />
        <com.tinder.views.CustomTextView android:gravity="center" android:id="@id/have_fun" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/have_fun" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/emoji_party_popper_tada" style="@style/MessageStd.Header" />
        <com.tinder.views.CustomTextView android:id="@id/life_is_short" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/life_is_short" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/have_fun" style="@style/MessageStd.SubHeaderFemale" />
        <com.tinder.views.CustomButton android:textSize="@dimen/text_l" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/got_it" android:background="@drawable/button_rounded_gradient" android:paddingLeft="@dimen/discovery_empty_button_padding" android:paddingTop="0.0dip" android:paddingRight="@dimen/discovery_empty_button_padding" android:paddingBottom="0.0dip" android:layout_width="0.0dip" android:layout_height="55.0dip" android:layout_marginTop="@dimen/space_xl" android:foreground="@drawable/rectangle_touch_feedback" android:text="@string/got_it_action" android:textAllCaps="true" app:customFontStyle="semi_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/life_is_short" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>