<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:gravity="center_horizontal" android:background="@color/white" android:paddingTop="@dimen/space_xxl" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.tinder.views.CustomTextView android:id="@id/msgstd_dialog_title" android:paddingLeft="@dimen/space_xxl" android:paddingRight="@dimen/space_xxl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m" android:text="@string/before_chat_pointers" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/MessageStd.DialogTitle" />
        <com.tinder.views.CustomTextView android:id="@id/tap_to_agree" android:paddingLeft="@dimen/space_xxl" android:paddingRight="@dimen/space_xxl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tap_to_agree" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/msgstd_dialog_title" style="@style/MessageStd.DialogSubTitle" />
        <android.support.constraint.Guideline android:orientation="vertical" android:id="@id/checkboxGuideLine" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/space_xxxl" />
        <android.support.constraint.Guideline android:orientation="vertical" android:id="@id/left_guide_line" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/space_l" />
        <com.tinder.views.CustomTextView android:id="@id/dont_be" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_xl" android:text="@string/do_not_be_a" app:layout_constraintLeft_toLeftOf="@id/left_guide_line" app:layout_constraintStart_toStartOf="@id/left_guide_line" app:layout_constraintTop_toBottomOf="@id/tap_to_agree" style="@style/MessageStd.Header" />
        <com.tinder.views.CustomTextView android:id="@id/eggplant_emoji" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_xl" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintRight_toRightOf="@id/checkboxGuideLine" app:layout_constraintStart_toEndOf="@id/dont_be" app:layout_constraintTop_toBottomOf="@id/tap_to_agree" style="@style/MessageStd.Emoji_Male" />
        <com.tinder.views.CustomTextView android:theme="@style/MessageStd.SubHeaderMale" android:id="@id/behave_around_here" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/behave_around_here" app:layout_constraintEnd_toEndOf="@id/checkboxGuideLine" app:layout_constraintLeft_toLeftOf="@id/left_guide_line" app:layout_constraintRight_toRightOf="@id/checkboxGuideLine" app:layout_constraintStart_toStartOf="@id/left_guide_line" app:layout_constraintTop_toBottomOf="@id/eggplant_emoji" />
        <CheckBox android:id="@id/eggplant_checkbox" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="@dimen/space_xl" app:layout_constraintLeft_toLeftOf="@id/checkboxGuideLine" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/checkboxGuideLine" app:layout_constraintTop_toBottomOf="@id/tap_to_agree" style="@style/MessageStd.CheckBox" />
        <View android:id="@id/separator_eggplant" android:background="@color/gray_light" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="@dimen/space_m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/behave_around_here" />
        <com.tinder.views.CustomTextView android:id="@id/be_respectful" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_l" android:text="@string/be_respectful" app:layout_constraintLeft_toLeftOf="@id/left_guide_line" app:layout_constraintStart_toStartOf="@id/left_guide_line" app:layout_constraintTop_toBottomOf="@id/separator_eggplant" style="@style/MessageStd.Header" />
        <com.tinder.views.CustomTextView android:id="@id/emoji_pray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_l" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintRight_toRightOf="@id/checkboxGuideLine" app:layout_constraintStart_toEndOf="@id/be_respectful" app:layout_constraintTop_toBottomOf="@id/separator_eggplant" style="@style/MessageStd.Emoji_Male" />
        <com.tinder.views.CustomTextView android:id="@id/person_other_end" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/person_other_end" app:layout_constraintEnd_toEndOf="@id/checkboxGuideLine" app:layout_constraintLeft_toLeftOf="@id/left_guide_line" app:layout_constraintRight_toRightOf="@id/checkboxGuideLine" app:layout_constraintStart_toStartOf="@id/left_guide_line" app:layout_constraintTop_toBottomOf="@id/emoji_pray" style="@style/MessageStd.SubHeaderMale" />
        <CheckBox android:id="@id/respect_checkbox" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="@dimen/space_l" app:layout_constraintLeft_toLeftOf="@id/checkboxGuideLine" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/checkboxGuideLine" app:layout_constraintTop_toBottomOf="@id/separator_eggplant" style="@style/MessageStd.CheckBox" />
        <View android:id="@id/separator_respectful" android:background="@color/gray_light" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="@dimen/space_m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/person_other_end" />
        <com.tinder.views.CustomTextView android:id="@id/have_fun" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_l" android:text="@string/have_fun" app:layout_constraintLeft_toLeftOf="@id/left_guide_line" app:layout_constraintStart_toStartOf="@id/left_guide_line" app:layout_constraintTop_toBottomOf="@id/separator_respectful" style="@style/MessageStd.Header" />
        <com.tinder.views.CustomTextView android:id="@id/emoji_party_popper_tada" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_l" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintRight_toRightOf="@id/checkboxGuideLine" app:layout_constraintStart_toEndOf="@id/have_fun" app:layout_constraintTop_toBottomOf="@id/separator_respectful" style="@style/MessageStd.Emoji_Male" />
        <com.tinder.views.CustomTextView android:id="@id/life_is_short" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/life_is_short" app:layout_constraintEnd_toEndOf="@id/checkboxGuideLine" app:layout_constraintLeft_toLeftOf="@id/left_guide_line" app:layout_constraintRight_toRightOf="@id/checkboxGuideLine" app:layout_constraintStart_toStartOf="@id/left_guide_line" app:layout_constraintTop_toBottomOf="@id/emoji_party_popper_tada" style="@style/MessageStd.SubHeaderMale" />
        <CheckBox android:id="@id/fun_checkbox" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="@dimen/space_l" app:layout_constraintLeft_toLeftOf="@id/checkboxGuideLine" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/checkboxGuideLine" app:layout_constraintTop_toBottomOf="@id/separator_respectful" style="@style/MessageStd.CheckBox" />
        <com.tinder.messagestandard.utils.SliderView android:layout_gravity="bottom" android:id="@id/shimmer_frame_layout" android:background="@color/gray" android:layout_width="0.0dip" android:layout_height="64.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent">
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/slide_view" android:paddingLeft="@dimen/space_s" android:paddingRight="@dimen/space_s" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:gravity="center" android:id="@id/arrows" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawableLeft="@drawable/arrows_message_std" android:drawableStart="@drawable/arrows_message_std" />
                <com.tinder.views.CustomTextView android:textSize="@dimen/text_s" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/slide_right_text" android:paddingLeft="@dimen/space_s" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/slide_acknowledge" android:textAllCaps="true" android:paddingStart="@dimen/space_s" app:customFontStyle="medium" />
            </LinearLayout>
            <com.tinder.views.CustomTextView android:textSize="@dimen/text_sm" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/thankyou" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/thank_you" android:textAllCaps="true" app:customFontStyle="medium" />
        </com.tinder.messagestandard.utils.SliderView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>